--- a/TourManagement.Presentation/Areas/Admin/Views/EmployeesManagement/Edit.cshtml
+++ b/TourManagement.Presentation/Areas/Admin/Views/EmployeesManagement/Edit.cshtml
@@ -39,15 +39,25 @@
             </div>
 
             <div class="form-group">
+                <label class="control-label">Birth of date</label>
+                <div>
+                    <input type="date" name="BirthDate" id="BirthDate" class="form-control" value="@Model.BirthDate.Value.ToString("yyyy-MM-dd")" />
+                    @Html.ValidationMessageFor(model => model.BirthDate, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            
+        </div>
+
+        <div class="col-5">
+            <div class="form-group">
                 <label class="control-label">Phone</label>
                 <div>
                     <input type="number" name="Phone" id="Phone" class="form-control" min="0" value="@Model.Phone" />
                     @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
 
-        <div class="col-5">
             <div class="form-group">
                 <label class="control-label">Address</label>
                 <div>
@@ -76,8 +86,3 @@
     </div>
 
 </form>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
-
