--- a/TourManagement.Presentation/Areas/Admin/Views/EmployeesManagement/Index.cshtml
+++ b/TourManagement.Presentation/Areas/Admin/Views/EmployeesManagement/Index.cshtml
@@ -3,6 +3,13 @@
 @{
     ViewBag.Title = "Employee Mamagement";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+
+    int totalPage = @ViewBag.TotalPage;
+    int pageRange = 3;
+    int currentPage = @ViewBag.CurrentPage;
+
+    var prevDisabled = (currentPage - 1 <= 0 ? "disabled" : "");
+    var nextDisabled = (currentPage >= totalPage ? "disabled" : "");
 }
 <div>
     <h2>Employee Management</h2>
@@ -13,17 +20,19 @@
         <a href="@Url.Action("Create", "EmployeesManagement")" class="btn btn-primary">ADD</a>
     </div>
     <div class="col-5">
-        @using (Html.BeginForm("Search", "", FormMethod.Get, new { @class = "form-inline my-2 my-lg-0" }))
-        {
-            <input class="form-control mr-sm-2 btn-none" id="seach" name="search" type="search" placeholder="Tìm kiếm nhân viên " aria-label="Search">
+        <form action="@Url.Action("Search","EmployeesManagement")" method="get" class="form-inline" >
+            <input class="form-control mr-sm-2 btn-none" id="employeeSearch" name="employeeSearch" type="search" placeholder="Tìm kiếm nhân viên ">
+            <input class="form-control mr-sm-2 btn-none" value="1" id="page" name="page" hidden>
             <button class="btn my-2 my-sm-0 btn-none" type="submit"><img src="~/Content/images/searchbtn.svg" width="25" height="25" /></button>
-        }
+        </form>
+
+        
     </div>
 </div>
 
 <table class="table table-bordered ">
     <tr>
-        <th>
+        <th class="w-50">
             Name
         </th>
         <th>
@@ -56,19 +65,41 @@
                     <p>Nữ</p>
                 }
             </td>
+
             <td>
                 @Html.DisplayFor(modelItem => item.Address)
             </td>
+
             <td>
                 @Html.DisplayFor(modelItem => item.StatusWorking)
             </td>
+
             <td class="d-flex border-bottom-0 border-left-0 border-right-0">
                 <form action="@Url.Action("Delete","EmployeesManagement", new { id=item.Id })" method="post">
                     <a href="@Url.Action("Edit", "EmployeesManagement", new { id=item.Id })" class="btn btn-outline-primary mx-1">Edit</a>
                     <button type="submit" onclick="return confirm('Are you sure to delete this hotel?');" class="btn btn-outline-danger mx-1">Delete</button>
                 </form>
             </td>
+
         </tr>
     }
 </table>
 
+
+<nav aria-label="Page navigation example" class="row w-100">
+    <ul class="pagination col-12 justify-content-center">
+        <li class="page-item"><a class="btn page-link @prevDisabled" href="@Url.Action("Index", "EmployeesManagement", new {page=(currentPage - 1 <= 0 ? 1 : currentPage - 1) })">Previous</a></li>
+        @for (int i = 1; i <= totalPage; i++)
+        {
+            if (i >= currentPage - pageRange && i <= currentPage + pageRange)
+            {
+                <li class="page-item">
+                    <a class="page-link" href="@Url.Action("Index", "EmployeesManagement", new {page = i })">@i</a>
+                </li>
+            }
+        }
+        <li class="page-item">
+            <a class="btn page-link @nextDisabled" href="@Url.Action("Index", "EmployeesManagement", new {page=(currentPage + 1 > totalPage ? totalPage : currentPage + 1)})">Next</a>
+        </li>
+    </ul>
+</nav>
