--- a/TourManagement.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TourManagement.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse row" id="navbarSupportedContent">
             <ul class="navbar-nav col-10">
                 <li class="nav-item font-weight-bold">
-                    <a href="@Url.Action("Index", "EmployeesManagement", new { area = "Admin" })" class="nav-link">
+                    <a href="@Url.Action("Index", "EmployeesManagement", new { area = "Admin", page =1 })" class="nav-link">
                         <img src="~/Content/images/management.svg" height="20" width="20" />
                         Employees
                     </a>
